# optimal-screening

./: .gitignore  README.md  pyproject.toml
configs/: example-risk.yaml
data/: acs_income_sample.csv
scripts/: plot_figures.py  run_tabular_models.py  simulate_distributions.py  simulate_utility_gap.py
src/optimal_screening/: __init__.py  data_sources.py
src/optimal_screening/analysis/: __init__.py  stratified.py
src/optimal_screening/cli/: __init__.py  calculate_risk.py  get_optimal_screening.py  replicate_plots.py  replicate_results.py
tests/: test_calculate_risk_cli.py  test_get_optimal_screening_cli.py  test_optimal_screening.py
