[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimal-screening-paper"
version = "0.1.0"
description = "Camera-ready code for optimal screening paper figures and risk curves"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Optimal Screening Contributors" }]
dependencies = [
  "PyYAML>=6.0",
  "datasets>=2.18",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "xgboost>=2.0",
]

[project.scripts]
replicate-plots = "optimal_screening.cli.replicate_plots:main"
calculate-risk = "optimal_screening.cli.calculate_risk:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.7",
]

[tool.ruff]
target-version = "py311"
line-length = 119

[tool.ruff.lint]
extend-select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B028"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.hatch.build.targets.wheel]
packages = ["src/optimal_screening"]
